Zmieniono katalog save'a

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -37,4 +37,5 @@ services:
 
     app.voucher_generator:
         class: 'AppBundle\Service\VoucherGenerator'
+        arguments: [%kernel.root_dir%]
         public: true
